--- a/css/editoria11y.css
+++ b/css/editoria11y.css
@@ -5,7 +5,7 @@
 .ed11y-reset ul,
 .ed11y-reset label,
 .ed11y-reset a {
-  font-family: Tahoma, Roboto, "Helvetica Neue", sans-serif !important;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   line-height: 1.5 !important;
   font-weight: 400 !important;
   margin: 0 !important;
@@ -15,15 +15,16 @@
   background: none !important;
   color: #404040 !important;
   font-size: inherit !important;
+  white-space: initial !important;
 }
 .ed11y-reset {
-  font-size: 16px !important;
+  font-size: 15px !important;
 }
 .ed11y-reset div {
   box-sizing: border-box !important;
 }
 .ed11y-reset p {
-  padding-bottom: 16px !important;
+  padding-bottom: 13px !important;
 }
 .ed11y-tip a,
 .ed11y-container a {
@@ -40,12 +41,13 @@
 .ed11y-container a:hover {
   color: #0a65aa !important;
 }
-.ed11ytip-heading {
-  font-size: 18px;
-  font-weight: 600;
-  padding-bottom: 0;
-  margin: 0 12px 16px 0;
-  color: #112f4e;
+.ed11y-tip-heading {
+  font-size: 15px;
+  font-weight: 500;
+  padding: 12px 16px 11px 16px;
+  margin: -16px -16px 11px -16px;
+  color: #fff;
+  background: #3679B0;
 }
 .ed11y-panel-header {
   position: relative;
@@ -117,7 +119,7 @@ button.ed11y-pop {
 }
 button.ed11y-pop:hover,
 button.ed11y-pop:focus {
-  box-shadow: inset 0 0 0 4px #5294ca !important;
+  box-shadow: 0 0 0 3px #5294ca !important;
 }
 .ed11y-headings-fail {
   color: #c22326;
@@ -203,13 +205,13 @@ button.ed11y-pop:focus {
   padding: 0 15px;
   line-height: 28px !important;
   background: #ccc;
-  font-size: 12px;
+  font-size: 14px;
   color: #404040;
   font-weight: 600;
 }
 #ed11y-container .ed11y-fullcheck-header p {
   padding: 4px 0 8px !important;
-  font-size: 12px !important;
+  font-size: 14px !important;
 }
 
 .ed11y-bold {
@@ -235,14 +237,14 @@ button.ed11y-pop:focus {
   padding-bottom: 0;
   width: 100%;
   transition: all .60s ease;
-  border-bottom: 1px solid #dbdbdbbf;
+  border-bottom: 1px solid #dbdbdb;
 }
 .ed11y-fullcheck .ed11y-header-button {
-  box-shadow: inset 1px -1px #00000014 !important;
+  box-shadow: inset 1px -1px #aaa !important;
   background: transparent !important;
   color: #555 !important;
   opacity: 1;
-  padding: 4px 8px 13px 9px !important;
+  padding: 0 8px 0 9px !important;
 }
 .ed11y-fullcheck button:hover,
 .ed11y-fullcheck button:focus {
@@ -256,6 +258,7 @@ button.ed11y-pop:focus {
   top: 0;
   right: 0;
   font-size: 12px !important;
+  font-weight: 700;
   height: 28px !important;
 }
 
@@ -293,6 +296,10 @@ button.ed11y-pop:focus {
 }
 #ed11y-container .ed11y-toggle-errors {
   background-image: linear-gradient(to top, #790909, #b80000) !important;
+}
+#ed11y-container #ed11y-main-toggle.disabled {
+  background: gray !important;
+  cursor: not-allowed !important;
 }
 /*
 #ed11y-container .ed11y-x {
@@ -344,7 +351,6 @@ button.ed11y-pop:focus {
   border-radius: 0;
 }
 .ed11y-error-message {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   font-size: 16px;
   padding: 15px;
   background-color: #c22326;
@@ -505,16 +511,14 @@ button.ed11y-close-button {
   margin-top: 4px;
 }
 .ed11y-tip button {
-  top: -32px;
-  background: #f5f9ff !important;
-  border: 1px solid #5294ca !important;
-  border-bottom: none !important;
+  top: 0;
   position: absolute;
-  right: 12px;
-  border-radius: 7px 7px 0 0;
   width: 34px;
-  height: 32px;
-  color: #112f4e !important;
+  height: 46px;
+  right: 2px;
+  color: #fafafa !important;
+  background: transparent !important;
+  box-shadow: -1px 1px #fff9 !important;
 }
 
 .ed11y-button:hover,
@@ -615,13 +619,13 @@ span.ed11y-headings-label {
   }
 }
 
-.ed11ytip-ready[aria-expanded="true"]:focus {
+.ed11y-tip-ready[aria-expanded="true"]:focus {
   outline: none;
 }
-[data-ed11ytip-root] {
+[data-ed11y-tip-root] {
   z-index: 500 !important;
 }
-.ed11ytip-box[data-theme~='ed11y-theme'] {
+.ed11y-tip-box[data-theme~='ed11y-theme'] {
   background-color: white;
   color: #333;
   padding: 8px;
@@ -635,16 +639,13 @@ span.ed11y-headings-label {
   max-width: 90vw;
   position: absolute;
   margin: -37px 0 0 38px !important;
-  background: #f5f9ff !important;
-  border: 1px solid #5294ca !important;
-  border-radius: 3px 0 3px 3px;
-  padding: 16px !important;
-  box-shadow: 3px 3px 3px #0003 !important;
+  background: #fafafa !important;
+  border-radius: 3px 0 3px 0;
+  padding: 16px 16px 0 16px !important;
+  box-shadow: inset 0 0 0 2px #3679B0, -1px 0 #fff3, 1px 1px 5px #0003 !important;
   color: #112f4e !important;
   z-index: 1001;
   display: none;
-  opacity: 0;
-  transition: opacity .15s ease-out;
 }
 .ed11y-tip .ed11y-arrow {
   content: "";
@@ -653,10 +654,10 @@ span.ed11y-headings-label {
   height: 20px;
   margin-left: -26px;
   transform: rotate(45deg);
-  border: 1px solid #5294ca;
+  border: 1px solid #fff9;
   border-right: 0;
   border-top: 0;
-  background: #f5f9ff;
+  background: #3679B0;
 }
 .ed11y-about[aria-expanded="true"] {
   background: #eee;
@@ -705,20 +706,22 @@ span.ed11y-headings-label {
   display: block;
   opacity: 1;
 }
-
+.ed11y-instance {
+  text-align: left;
+}
 .ed11y-instance-inline {
   text-align: left;
   display: inline;
   vertical-align: top;
   position: absolute;
 }
-.ed11ytip-closer {
+.ed11y-tip-closer {
   margin: -13px -16px 0 0 !important;
   position: relative;
   float: right;
   padding: 2px 8px 5px 9px !important;
   font-size: 14px !important;
 }
-#ed11y-panel .ed11ytip-box {
+#ed11y-panel .ed11y-tip-box {
   width: 95%;
 }
