--- a/css/editoria11y.css
+++ b/css/editoria11y.css
@@ -141,17 +141,16 @@
   height: 34px !important;
 }
 #ed11y-panel .ed11y-toggle-icon {
-  width: 34px !important;
-  height: 34px !important;
+  width: 0 !important;
+  height: 0 !important;
+  padding: 17px !important;
   display: inline-block !important;
-  margin: -5px -1px -14px !important;
+  vertical-align: middle !important;
+  margin: -15px -1px -17px !important;
   background-color: transparent !important;
 }
 #ed11y-panel.ed11y-pass .ed11y-toggle-icon {
-  margin: -4px -5px -11px !important;
-}
-#ed11y-panel.ed11y-warnings .ed11y-toggle-icon {
-  margin: -4px -6px -13px -4px !important;
+  margin: -19px -5px -17px !important;
 }
 .ed11y-minimize span {
   box-shadow: 2px 2px #777 !important;
@@ -210,6 +209,7 @@
   font-size: 14px !important;
   vertical-align: middle !important;
   color: #fed !important;
+  min-width: 1em !important;
 }
 
 #ed11y-panel-content {
@@ -586,10 +586,9 @@ div.ed11y-panel-icon {
 }
 
 #ed11y-panel.ed11y-warnings .ed11y-toggle-icon {
-  margin: 0 4px -8px 1px !important;
-  height: 24px !important;
-  width: 24px !important;
-  box-shadow: 0 0 0 1.5px #000 !important;
+  margin: 0 5px 0 -1px !important;
+  padding: 14px !important;
+  box-shadow: inset 0 0 0 2px #000 !important;
   border-radius: 100% !important;
   filter: invert(1) brightness(1.725) !important;
 }
@@ -601,14 +600,14 @@ div.ed11y-panel-icon {
   position: absolute !important;
   margin: 10px 0 0 10px !important;
   z-index: 499 !important;
-  padding: 7px !important;
+  padding: 17px !important;
   vertical-align: middle !important;
   cursor: pointer !important;
   box-shadow: 1px 1px 5px 0 rgba(0,0,0,.5) !important;
   min-width: 0 !important;
   outline: 0 !important;
-  width: 34px !important;
-  height: 34px !important;
+  width: 0 !important;
+  height: 0 !important;
 }
 .ed11y-reset .ed11y-pop[data-ed11y-inserted="after"] {
   margin-left: -8px !important;
